fix image size for specfit. Add Gatsby to skills. Add margins and wrapping to skills rows.

--- a/app/scss/sections/_skills.scss
+++ b/app/scss/sections/_skills.scss
@@ -8,6 +8,7 @@
         }
         &__row {
             display: flex;
+            flex-wrap: wrap;
             justify-content: space-evenly;
             margin-bottom: 3rem;
 
@@ -16,6 +17,8 @@
                 flex-direction: column;
                 justify-content: flex-start;
                 align-items: center;
+                margin-left: 5px;
+                margin-right: 5px;
                 svg {
                     width: 2rem;
                     height: 2rem;
